test/org/midica/testfiles/failing/function-redefined.midica
INCLUDE inc/instruments.midica

FUNCTION test
	0 c /4
	0 c /4
END

FUNCTION test
	0 c /4
END
